K8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tick-game
  labels:
    app: tick-game
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: tick-game
