K8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tick-game
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
    - host: tic-tac-toe.example.com # Replace with your actual domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tick-game
                port:
                  number: 80
